# Karabiner-Elements

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .markdownlint.json  .prettierrc.json  .swiftlint.yml  .travis.yml  DEVELOPMENT.md  Makefile  NEWS.md  README.md  SECURITY.md  TASKS.md  karabiner2.json  make-package.sh  refresh.sh  version
appendix/dump_libkrbn/: Bridging-Header.h  CMakeLists.txt  Makefile  main.cpp  project.yml
src/apps/EventViewer/: AppDelegate.m  CMakeLists.txt  EventViewer_Prefix.pch  Info.plist.tmpl  Makefile  main.m  project.yml
src/apps/EventViewer/Base.lproj/: MainMenu.xib
src/apps/EventViewer/Classes/: DevicesController.h  DevicesController.m  EventQueue.h  EventQueue.m  EventViewerApplication.h  EventViewerApplication.m  FrontmostApplicationController.m  KeyResponder.m  PreferencesManager.h  PreferencesManager.m  VariablesController.h  VariablesController.m
src/apps/EventViewer/English.lproj/: MainMenu.xib
src/apps/EventViewer/EventViewer.xcodeproj/: project.pbxproj
src/apps/EventViewer/Resources/: Info.plist.in  MainMenu.xib  app.icns  plist.in
src/apps/EventViewer/src/: AppDelegate.h  AppDelegate.m  AppDelegate.swift  Devices.swift  DevicesController.h  DevicesController.m  DevicesController.swift  DevicesJsonString.swift  EVConsoleUserServerClient.swift  EVCoreServiceClient.swift  EVCoreServiceDaemonClient.swift  EVGrabberClient.swift  EventHistory.swift  EventQueue.h  EventQueue.m  EventQueue.swift  FrontmostApplicationController.h  FrontmostApplicationController.m  FrontmostApplicationController.swift  FrontmostApplicationHistory.swift  InputMonitoringAlertView.swift  InputMonitoringAlertWindowController.h  InputMonitoringAlertWindowController.m  InputMonitoringAlertWindowController.swift  KarabinerEventViewerApp.swift  KeyResponder.h  KeyResponder.m  KeyResponder.swift  NSWindowExtension.swift  PreferencesKeys.h  PreferencesManager.h  PreferencesManager.m  SystemExtensions.swift  TabView.h  TabView.m  TabView.swift  UserDefaults-propertyWrapper.swift  UserSettings.swift  VariablesController.h  VariablesController.m  (+3 more)
src/apps/Menu/: CMakeLists.txt  Makefile  project.yml
src/apps/Menu/Karabiner-Menu.xcodeproj/: project.pbxproj
src/apps/Menu/Menu/: AppDelegate.h  AppDelegate.m  Info.plist.tmpl  MenuController.h  MenuController.m
src/apps/Menu/Menu.xcodeproj/: project.pbxproj
src/apps/Menu/Resources/: Info.plist.in  MainMenu.xib  plist.in
src/apps/Menu/src/: .gitignore  AppDelegate.m  AppDelegate.swift  Bridging-Header.h  KarabinerMenuApp.swift  MenuController.h  MenuController.m  MenuController.swift  main.m
src/apps/MultitouchExtension/: CMakeLists.txt  Makefile  project.yml
src/apps/MultitouchExtension/Resources/: Info.plist.in  MainMenu.xib  app.icns
src/apps/MultitouchExtension/src/: AppDelegate.m  AppDelegate.swift  Bridging-Header.h  FingerCount.h  FingerCount.m  FingerCount.swift  FingerManager.swift  FingerState.swift  FingerStatus.h  FingerStatus.m  FingerStatusEntry.h  FingerStatusEntry.m  FingerStatusEntry.swift  FingerStatusManager.h  FingerStatusManager.m  FingerStatusManager.swift  IgnoredAreaView.h  IgnoredAreaView.m  IgnoredAreaView.swift  KarabinerMultitouchExtensionApp.swift  MECoreServiceClient.swift  MECoreServiceDaemonClient.swift  MEGrabberClient.swift  MultitouchDeviceManager.h  MultitouchDeviceManager.m  MultitouchDeviceManager.swift  MultitouchPrivate.h  NotificationKeys.h  OpenAtLogin.swift  PreferencesController.h  PreferencesController.m  PreferencesKeys.h  SettingsWindowManager.swift  UserDefaults-propertyWrapper.swift  UserSettings.swift
src/apps/NotificationWindow/: CMakeLists.txt  Makefile  project.yml
src/apps/NotificationWindow/Resources/: Info.plist.in  MainMenu.xib  NotificationWindow.xib
src/apps/PreferencesWindow/: CMakeLists.txt  Makefile  project-base.yml  project-without-codesign.yml  project.yml
src/apps/Updater/: CMakeLists.txt  Makefile  Podfile  project-base.yml  project-with-codesign.yml  project.yml
src/core/console_user_server/: CMakeLists.txt  Makefile  main.cpp  project.yml
src/core/grabber/: CMakeLists.txt  Makefile  karabiner_grabber  main.cpp  project.yml
src/core/kextd/: CMakeLists.txt  Makefile
src/core/observer/: CMakeLists.txt  Makefile  project.yml
src/core/session_monitor/: CMakeLists.txt  Makefile  project.yml
src/lib/libkrbn/: CMakeLists.txt  Makefile  libkrbn.cpp  libkrbn.h  libkrbn.hpp  libkrbn_complex_modifications_assets_manager.cpp  libkrbn_configuration.cpp  libkrbn_configuration_monitor.cpp  libkrbn_connected_devices.cpp  libkrbn_core_configuration.cpp  libkrbn_cpp.hpp  libkrbn_device_monitor.cpp  libkrbn_file_monitor.cpp  libkrbn_grabber_alerts_monitor.cpp  libkrbn_hid_value_observer.cpp  libkrbn_log_monitor.cpp  libkrbn_manipulator_environment_monitor.cpp  libkrbn_system_preferences_monitor.cpp  libkrbn_version_monitor.cpp  project.yml
tests/src/complex_modifications_assets/: CMakeLists.txt  complex_modifications_assets_file_test.cpp
tests/src/core_configuration/: CMakeLists.txt  Makefile  test.cpp
tests/src/device_properties/: CMakeLists.txt  Makefile  test.cpp
tests/src/duktape_utility/: CMakeLists.txt
tests/src/event_queue/: CMakeLists.txt  Makefile  event_queue_test.cpp  test.cpp  test.hpp
tests/src/grabbable_state/: CMakeLists.txt  grabbable_state_manager_test.cpp
tests/src/manipulator/: .gitignore  CMakeLists.txt  Makefile  manipulator_factory_test.cpp  manipulator_manager_test.cpp  overwrite_expected_results.cpp  test.cpp
tests/src/manipulator_basic/: CMakeLists.txt  Makefile  errors_test.cpp  manipulator_basic_test.cpp  simultaneous_options_test.cpp  to_after_key_up_test.cpp  to_if_alone_test.cpp  to_if_held_down_test.cpp
tests/src/manipulator_types/: CMakeLists.txt  errors_test.cpp  event_definition_test.cpp  modifier_definition_test.cpp
tests/src/post_event_to_virtual_devices/: CMakeLists.txt  Makefile  overwrite_expected_results.cpp  post_event_to_virtual_devices_test.cpp  test.cpp
tests/src/process_codesign_monitor/: CMakeLists.txt  Makefile
tests/src/types/: CMakeLists.txt  test.cpp
(+2472 files in other folders)
